--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- <div id="contenedorBody"> -->
                 <textarea name=""  class="panel" id="htmlPanel">
 
- <p>Escriba su códgo</p>
+ <p>Escriba su código</p>
  <h1>HTML</h1>
  <p>aquí</p> 
  </textarea>
